--- a/about.html
+++ b/about.html
@@ -51,13 +51,7 @@
                     <p>We are on a mission to empower businesses through people whilst leveraging the abilities of today's technology to bring true measurable and impactful value to your organization which will directly and positively impact your clients and/or customers.</p>
                 </div>
                 <div class="content-visual">
-                    <div class="visual-placeholder">
-                        <svg width="100%" height="100%" viewBox="0 0 400 300">
-                            <rect x="50" y="50" width="300" height="200" fill="none" stroke="var(--primary-blue)" stroke-width="2"/>
-                            <circle cx="200" cy="150" r="60" fill="var(--primary-gold)" opacity="0.3"/>
-                            <text x="200" y="160" text-anchor="middle" fill="var(--primary-blue)" font-size="24" font-weight="600">Vision</text>
-                        </svg>
-                    </div>
+                    <img src="images/vision-illustration.svg" alt="Navalogic Vision" style="width: 100%; max-width: 400px; height: auto;">
                 </div>
             </div>
         </div>
