Hide content-visual section in about.html
Commented out the content-visual div to hide the image.

--- a/about.html
+++ b/about.html
@@ -50,9 +50,9 @@
                     <p>At Navalogic, our senior leadership team brings over 90 years of combined business and technical experience with the majority at the leadership level helping drive overall business success, from startup organizations through to the enterprise.</p>
                     <p>We are on a mission to empower businesses through people whilst leveraging the abilities of today's technology to bring true measurable and impactful value to your organization which will directly and positively impact your clients and/or customers.</p>
                 </div>
-                <div class="content-visual">
+                <!-- <div class="content-visual">
                     <img src="images/vision-illustration.svg" alt="Navalogic Vision" style="width: 100%; max-width: 400px; height: auto;">
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
