--- a/about.html
+++ b/about.html
@@ -16,7 +16,9 @@
         <div class="container">
             <div class="nav-wrapper">
                 <div class="logo">
-                    <a href="index.html">Navalogic</a>
+                    <a href="index.html">
+                        <img src="images/navalogic-logo.png" alt="Navalogic" class="logo-img">
+                    </a>
                 </div>
                 <button class="mobile-menu-toggle" id="mobileMenuToggle">
                     <span></span>
