--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navalogic - Digital Innovation & Business Advisory</title>
+    <meta name="description" content="Navalogic provides digital innovation, business advisory, consulting, and cybersecurity services to help organizations grow, transform, and stay secure." />
+    <title>Digital Innovation & Business Advisory Services | Navalogic</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
