--- a/service-backup-disaster-recovery.html
+++ b/service-backup-disaster-recovery.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Comprehensive strategies to keep your business resilient through any disruption with Navalogic's Back-up and Disaster Recovery service." />
     <title>Back-up and Disaster Recovery - Navalogic</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="pages.css">
