--- a/service-leadership-coaching.html
+++ b/service-leadership-coaching.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Cultivate essential soft skills and communication abilities for effective leadership with Navalogic's Leadership Development and Coaching service." />
     <title>Leadership Development and Coaching - Navalogic</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="pages.css">
