--- a/service-application-audits.html
+++ b/service-application-audits.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ensure the efficiency, security, and compliance of your application portfolio with Navalogic's Application Audits and Assessments service." />
     <title>Application Audits and Assessments - Navalogic</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="pages.css">
