--- a/service-cybersecurity.html
+++ b/service-cybersecurity.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Protect your organization from evolving threats with expert cybersecurity consulting and solutions with Navalogic's Cyber Security service." />
     <title>Cyber Security - Navalogic</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="pages.css">
