--- a/service-executive-education.html
+++ b/service-executive-education.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Empower yourself and your team with enhanced soft skills and communication abilities for effective leadership with Navalogic's Executive Education program." />
     <title>Executive Education - Navalogic</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="pages.css">
