--- a/service-sales-education.html
+++ b/service-sales-education.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Unlock the power of effective communication and interpersonal skills in sales with Navalogic's Sales Education program." />
     <title>Sales Education - Navalogic</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="pages.css">
