--- a/service-strategic-planning.html
+++ b/service-strategic-planning.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Chart a clear path for your organization's future success with actionable strategic plans from Navalogic." />
     <title>Strategic Planning - Navalogic</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="pages.css">
