--- a/services.html
+++ b/services.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Services - Navalogic</title>
+    <meta name="description" content="Comprehensive business and digital advisory services to help you grow and succeed with Navalogic." />
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="pages.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
