--- a/service-consulting.html
+++ b/service-consulting.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Tailored solutions to help your business overcome challenges and achieve strategic goals with Navalogic's Business & Digital Consulting service." />
     <title>Business & Digital Consulting - Navalogic</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="pages.css">
