--- a/service-soft-skills.html
+++ b/service-soft-skills.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Empower individuals and teams to excel in interpersonal interactions with Navalogic's Soft Skills / Communication Skills service." />
     <title>Soft Skills / Communication Skills - Navalogic</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="pages.css">
