--- a/service-executive-education.html
+++ b/service-executive-education.html
@@ -96,8 +96,14 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
-                <div class="footer-section">
-                    <h3>Navalogic</h3>
+                <div class="footer-section footer-brand">
+                    <a href="index.html">
+                        <img 
+                            src="images/navalogic-logo.png" 
+                            alt="Navalogic Logo"
+                            class="footer-logo"
+                        />
+                    </a>
                     <p>Empowering businesses through people and technology</p>
                 </div>
                 <div class="footer-section">
